2019-09-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve use of proposed sp-relative addressing mode.

2019-09-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve use of proposed sp-relative addressing mode.

2019-09-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve subtraction flexibility.

2019-09-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Use proposed sp-relative addressing mode (depending on feature macro).

2019-09-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/SDCCsalloc.hpp,
	  src/pdk/ralloc.c,
	  support/regression/tests/gcc-torture-execute-va-arg-19.c:
	  Use Chaitin-style allocator for stack variables.
	* src/pdk/gen.c:
	  Optimize out assignments between coalesced stack variables.

2019-09-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Emulate nadd a, m for pdk14, pdk13.

2019-09-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sdas/aspdk/pdk.h,
	  sdas/aspdk13/pdk13mch.c,
	  sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk14/pdk14mch.c,
	  sdas/aspdk14/pdk14pst.c:
	  Do not emit error on proposed idxsp and spadd instructions.
	* src/pdk/gen.c:
	  Use proposed idxsp and spadd instructions (depending on feature macro).

2019-09-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/SDCCopt.c,
	  support/regression/tests/bug-2931.c:
	  Fix bug #2931.

2019-09-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  support/regression/tests/nadd.c:
	  Use nadd in subtraction for pdk15.

2019-08-22 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/pdk.src/glob.cc,
	  sim/ucsim/pdk.src/inst.cc,
	  sim/ucsim/pdk.src/instcl.h,
	  sim/ucsim/pdk.src/pdk.cc,
	  sim/ucsim/pdk.src/pdkcl.h,
	  sim/ucsim/pdk.src/regspdk.h:
	  pdk13 I/O fix (patch #305 by Serge Rabyking).
	  .version: